同步于: 11月1日0时4分

--- a/pages/p5/951040.md
+++ b/pages/p5/951040.md
@@ -1,4 +1,4 @@
-### 神明为什么会对某人特别严厉呢？(组图)
+### 中国制造业关键数据PMI显示工厂活动放缓(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="" src="https://img2.secretchina.com/pic/2018/5-1/p2156761a228076124-ss.jpg" style="height:335px; width:600px"/>
+  <img alt="制造业 PMI 企业" src="https://img3.secretchina.com/pic/2020/5-11/p2688032a572903888-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   神总适时提醒人们说：“作为一个修行人，凡事应先修正自已！怎能向外求，盯着别人的错误呢？”（绘图：志清/看中国）
+   中国制造业关键数据PMI显示工厂活动放缓。（图片来源：Adobe stock）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,28 +29,140 @@
   </div>
  </div>
  <p>
-  从前有位修行人，心地善良纯净。他在森林里结舍，每天在大树下诵经读法、持咒守戒、打坐入定。
+  【看中国2020年10月31日讯】（看中国记者文龙综合报导）10月31日，中国官方公布
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/制造业" target="_blank">
+    制造业
+   </span>
+  </strong>
+  关键数据
+  <strong>
+   PMI
+  </strong>
+  为51.4，中小
+  <strong>
+   企业
+  </strong>
+  仍和此前一样处于经营困难的状态，并且工厂活动正在放缓。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
+  中国国家统计局和物流与采购联合会(CFLP)10月31日联合公布宏观经济先行指标--
+  <span href="https://zh.wikipedia.org/zh-cn/%E5%88%B6%E9%80%A0%E4%B8%9A" target="_blank">
+   制造业
+  </span>
+  采购经理人指数(PMI)，10月PMI降至51.4；10月非制造业商务活动指数比9月上升0.3个百分点至56.2；10月综合
+  <span href="https://zh.wikipedia.org/wiki/%E9%87%87%E8%B4%AD%E7%BB%8F%E7%90%86%E6%8C%87%E6%95%B0" target="_blank">
+   PMI
+  </span>
+  产出指数为55.3，比9月上升0.2个百分点。
+ </p>
+ <p>
+  从分类指数看，在构成制造业
+  <span href="https://www.secretchina.com/news/gb/tag/PMI" target="_blank">
+   PMI
+  </span>
+  的五个分类指数中，生产指数、新订单指数和供应商配送时间指数均高于50的临界点，原材料库存指数和从业人员指数均低于50的临界点。
+ </p>
+ <p>
+  从企业规模看，大型企业PMI为52.6，略高于9月0.1个百分点；中型
+  <span href="https://zh.wikipedia.org/zh-cn/%E4%BC%81%E4%B8%9A" target="_blank">
+   企业
+  </span>
+  PMI为50.6，比9月微落0.1个百分点；小型企业PMI为49.4，比9月下降0.7个百分点。
+ </p>
+ <p>
+  这表明除了以国企为主的大型企业之外，企业数量占比最高的中型和小型企业情况并不好，仍和此前一样处于经营困难的状态。与此同时，全球前景暗淡，许多西方国家正在抗击
+  <span href="https://www.secretchina.com/news/gb/tag/武汉肺炎" target="_blank">
+   武汉肺炎
+  </span>
+  病例的激增，有些国家重新实施封锁。
+ </p>
+ <p>
+  数据还显示，从业人员子指数从9月份的49.6降至49.3，公司连续第六个月以更快的速度裁员。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
+  </span>
+  国家统计局官员赵庆河表示，制造业整体继续回暖，小公司面临着疲软的市场需求。一些公司报告说，武汉肺炎疫情在海外再次流行，延长了原材料进口的采购期限，并增加了运输成本。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  第三季度，中国经济同比增长4.9%，低于预期。原本预计该数据全年将增长2%左右，这是过去三十年来最弱的一年。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  中国光大银行分析师周茂华在分析上诉数据的报告中表示，武汉肺炎病毒在海外的传播，可能会增加未来几个月中国出口的不确定性。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
   <strong>
-   修行人手摘香莲　惹怒莲花池神
+   制造业采购经理指数PMI
   </strong>
  </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
  <p>
-  一天他打完坐，起身信步走走。一抬头，看到眼前出现了一个莲花池，满池盛开的莲花，迎风摇曳，十分美丽。他心中欢喜，生起一个念头：这么美丽的莲花，摘一朵带回精舍，敬放在佛像前，禅坐时闻着沁人心脾的芬芳，多好啊！
- </p>
- <p>
-  于是，他弯身在池边挑选了一朵莲花，摘下来。他满心欢喜地将莲花双手捧在胸前，正要离开，耳边突然传来一个巨大而又严厉的声音：“你怎敢随意偷采我的莲花？”
- </p>
- <p>
-  他环顾四周，什么也看不到，他对着虚空发问：“你是谁？为何说这莲花是你的？”
- </p>
- <p>
-  虚空中的声音平静威严：“我是此处的莲花池神，池中所有莲花都因我的呵护而盛开。你是修行人，心起贪念，你却不知约束，任贪念主宰你，偷采我的莲花，现在还不知反省，是何道理！？”
+  PMI（Purchasing Managers' Index）是国际上通用的监测宏观经济走势的先行性指数之一，具有较强的预测、预警作用。通常以50作为经济强弱的临界值，也被称为临界点。高于50时，反映经济总体扩张；低于50，则反映经济总体收缩。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -65,149 +177,7 @@
   </div>
  </center>
  <p>
-  修行人顿感惭愧，于是他朝着虚空顶礼：“尊敬的莲花池神！我知道错了，从今以后绝不会贪取任何不属于自己的东西。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  这时，另一个陌生人走近了莲花池边，只见那人低头自语：“哇！这么好的莲花啊！我何不摘了拿到集上，能卖很多钱呢！卖了钱我一定再上赌场，把昨天输的钱赢回来！”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  说罢，那人跳进莲花池，很快就把整池的莲花摘个精光，之后，他扬长而去。满池莲叶被他弄得狼藉一片，池底污泥泛起，美丽的荷花池变成了一潭浊水。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  修行人看得目瞪口呆，心中充满疑惑，还有委屈与不满，他对着虚空说：“莲花池神呀！我只不过采了一朵莲花，你就那么严厉地斥责我。刚才那个人采光了你所有的莲花，将整个莲花池都践踏了，你却视而不见、一言不发，这公平吗？”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p style="text-align:center">
-  <img alt="" src="https://img2.secretchina.com/pic/2019/9-18/p2520571a584156675-ss.jpg"/>
-  <br>
-   莲花池神说道：“一块洁白的布匹，沾上一点脏污就非常显眼，但只要用力清洗，便会洁白如新；而一块黑抹布，长年浸渍在污水中，恐怕怎么洗也洗不干净了。”（摄影：李芳）
-  </br>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  虚空中传来莲花池神慈悲的声音：“一块洁白的布匹，沾上一点脏污就非常显眼，但只要用力清洗，便会洁白如新；而一块黑抹布，长年浸渍在污水中，恐怕怎么洗也洗不干净了。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <center>
-  <ins class="adsbygoogle" data-ad-client="ca-pub-1276641434651360" data-ad-format="fluid" data-ad-layout="in-article" data-ad-slot="3646767294" style="display:block; text-align:center;">
-  </ins>
- </center>
- <p>
-  “你是个修行人，如同那块洁白的布匹，我呵斥你是为了提醒，让你及时意识到自己的污点，去掉它，你应为此感到高兴才是。而那赌徒，已沉沦太久，难有改过之念，自会坠入报应之道，我又何必呵斥他呢！”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  神继续启悟说：“作为一个修行人，凡事应先修正自已！怎能向外求，盯着别人的错误呢？”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  这时修行人才悟到，刚才自己岂不是盯着别人的过错不放吗？难怪打坐常陷入昏沉啊。一味诵经持咒，不等于修行，遇事不责己过，反迁怒他人，又如何能获得解脱呢！
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  参考资料：民间故事
+  中国制造业PMI指数的计算方法是由5个扩散指数（分类指数）加权计算而成。5个分类指数及其权数是依据其对经济的先行影响程度确定的。具体包括：新订单指数，权数为30；生产指数，权数为25；从业人员指数，权数为20；供应商配送时间指数，权数为15；原材料库存指数，权数为10。其中，供应商配送时间指数为逆指数，在合成制造业PMI指数时进行反向运算。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -271,13 +241,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/911140.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/911140.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/911140.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/27/911140.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/951040.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/951040.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/951040.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/31/951040.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p7/911140.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p5/951040.md' width='0px' height='0px'/>
