同步于: 11月1日6时3分

--- a/pages/p2/951055.md
+++ b/pages/p2/951055.md
@@ -1,4 +1,4 @@
-### 神明为什么会对某人特别严厉呢？(组图)
+### 五中全会王沪宁“接班人”抢风头(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="" src="https://img2.secretchina.com/pic/2018/5-1/p2156761a228076124-ss.jpg" style="height:335px; width:600px"/>
+  <img alt="王沪宁" src="https://img3.secretchina.com/pic/2020/8-21/p2759722a327727481-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   神总适时提醒人们说：“作为一个修行人，凡事应先修正自已！怎能向外求，盯着别人的错误呢？”（绘图：志清/看中国）
+   王沪宁（图片来源: Lintao Zhang/Getty Images）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,28 +29,56 @@
   </div>
  </div>
  <p>
-  从前有位修行人，心地善良纯净。他在森林里结舍，每天在大树下诵经读法、持咒守戒、打坐入定。
+  【看中国2020年11月1日讯】（看中国记者林中宇综合报导）刚刚落幕的中共
+  <strong>
+   五中全会
+  </strong>
+  ，没有重大人事变动，但中共“大脑”
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/王沪宁" target="_blank">
+    王沪宁
+   </span>
+  </strong>
+  的“接班人”
+  <strong>
+   江金权
+  </strong>
+  在会后的新闻发布会亮相，意外成为与五中全会相关的重磅消息，甚至盖过了那些毫无悬念的“十四五”规划等话题。对于江金权突上位，也有不同的解读。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  <strong>
-   修行人手摘香莲　惹怒莲花池神
-  </strong>
+  综合媒体报导，10月30日上午，中共举行五中全会新闻发布会，
+  <span href="https://zh.wikipedia.org/wiki/江金权" target="_blank">
+   江金权
+  </span>
+  首度以中央政策研究室主任名义出席会议。
  </p>
  <p>
-  一天他打完坐，起身信步走走。一抬头，看到眼前出现了一个莲花池，满池盛开的莲花，迎风摇曳，十分美丽。他心中欢喜，生起一个念头：这么美丽的莲花，摘一朵带回精舍，敬放在佛像前，禅坐时闻着沁人心脾的芬芳，多好啊！
+  中央政策研究室是中共最顶层的所谓智囊机构，专为中共中央政治局研究政治理论、政策及草拟文件。王沪宁担任中央政策研究室主任长达18年，因此被外界称为“中共大脑”。
  </p>
  <p>
-  于是，他弯身在池边挑选了一朵莲花，摘下来。他满心欢喜地将莲花双手捧在胸前，正要离开，耳边突然传来一个巨大而又严厉的声音：“你怎敢随意偷采我的莲花？”
+  王沪宁为中共三届领导人做“政治化妆师”，为江泽民炮制“三代表”、为胡锦涛搞出“科学发展观”，
+  <span href="https://www.secretchina.com/news/gb/tag/习近平" target="_blank">
+   习近平
+  </span>
+  上台后，王又为习包装“中国梦”、“习思想”、“习核心”等。习近平自十九大之后内外政策急速左转，王沪宁被指脱不了干系。
  </p>
  <p>
-  他环顾四周，什么也看不到，他对着虚空发问：“你是谁？为何说这莲花是你的？”
+  而61岁的
+  <span href="https://www.secretchina.com/news/gb/tag/江金权" target="_blank">
+   江金权
+  </span>
+  ，也曾长期任职于中央政策研究室，先后担任中央政策研究室党建组副处级调研员、正处级调研员，党建研究局副局长、局长，自2013年4月起出任中央政策研究室副主任，曾多次陪同习近平出席内部活动。
  </p>
  <p>
-  虚空中的声音平静威严：“我是此处的莲花池神，池中所有莲花都因我的呵护而盛开。你是修行人，心起贪念，你却不知约束，任贪念主宰你，偷采我的莲花，现在还不知反省，是何道理！？”
+  江金权与王沪宁一样，都为中共领导人进行政治思想美化工作，他在
+  <span href="https://www.secretchina.com/news/gb/tag/江泽民" target="_blank">
+   江泽民
+  </span>
+  时代曾发表《江泽民党建思想研究》，到胡锦涛时代发表《论科学发展观的理论体系》，进入习近平时代，发表了《学习习近平总书记党的建设论述全面从严治党的行动指南》。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -65,7 +93,7 @@
   </div>
  </center>
  <p>
-  修行人顿感惭愧，于是他朝着虚空顶礼：“尊敬的莲花池神！我知道错了，从今以后绝不会贪取任何不属于自己的东西。”
+  江金权2016年5任中央纪委驻国资委纪检组长，次年当选19届中央纪委委员。2018年2月，江金权回锅中央政策研究室，担任分管日常工作的副主任。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -80,7 +108,11 @@
   </div>
  </center>
  <p>
-  这时，另一个陌生人走近了莲花池边，只见那人低头自语：“哇！这么好的莲花啊！我何不摘了拿到集上，能卖很多钱呢！卖了钱我一定再上赌场，把昨天输的钱赢回来！”
+  江金权回锅中央政策研究室之时，就被外界认为是备位接班王沪宁，而这次选择在
+  <span href="https://www.secretchina.com/news/gb/tag/五中全会" target="_blank">
+   五中全会
+  </span>
+  亮相，似乎与习近平最新人事布局有关。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -95,7 +127,7 @@
   </div>
  </center>
  <p>
-  说罢，那人跳进莲花池，很快就把整池的莲花摘个精光，之后，他扬长而去。满池莲叶被他弄得狼藉一片，池底污泥泛起，美丽的荷花池变成了一潭浊水。
+  北京独立媒体人高瑜对自由亚洲表示，王沪宁的接班人肯定是受习重视的，否则上不来。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -110,25 +142,7 @@
   </div>
  </center>
  <p>
-  修行人看得目瞪口呆，心中充满疑惑，还有委屈与不满，他对着虚空说：“莲花池神呀！我只不过采了一朵莲花，你就那么严厉地斥责我。刚才那个人采光了你所有的莲花，将整个莲花池都践踏了，你却视而不见、一言不发，这公平吗？”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p style="text-align:center">
-  <img alt="" src="https://img2.secretchina.com/pic/2019/9-18/p2520571a584156675-ss.jpg"/>
-  <br>
-   莲花池神说道：“一块洁白的布匹，沾上一点脏污就非常显眼，但只要用力清洗，便会洁白如新；而一块黑抹布，长年浸渍在污水中，恐怕怎么洗也洗不干净了。”（摄影：李芳）
-  </br>
+  文史学者宋扬则认为，这个人事任命实际上可以看到习近平正在紧抓人事布局，在为两年后的中共“二十大”进行人事部署。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -143,7 +157,7 @@
   </div>
  </center>
  <p>
-  虚空中传来莲花池神慈悲的声音：“一块洁白的布匹，沾上一点脏污就非常显眼，但只要用力清洗，便会洁白如新；而一块黑抹布，长年浸渍在污水中，恐怕怎么洗也洗不干净了。”
+  但外界分析，按照中共的晋升惯例，江金权61岁仍未入中委，想在二十大接替王沪宁政治局常委职务，机会并不大。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -162,7 +176,7 @@
   </ins>
  </center>
  <p>
-  “你是个修行人，如同那块洁白的布匹，我呵斥你是为了提醒，让你及时意识到自己的污点，去掉它，你应为此感到高兴才是。而那赌徒，已沉沦太久，难有改过之念，自会坠入报应之道，我又何必呵斥他呢！”
+  也有网友表示：估计是习家军嫡系现在的中宣部部长黄坤明接替王沪宁，2022年二十大他才66岁可以更上一层楼，这个江金权连中央委员和候补委员都不是，能进入政治局当中宣部部长都不错了，晋升常委有点……
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -177,7 +191,7 @@
   </div>
  </center>
  <p>
-  神继续启悟说：“作为一个修行人，凡事应先修正自已！怎能向外求，盯着别人的错误呢？”
+  学者夏业良则指：阿谀奉承之党棍充当中共高层智囊？
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -192,7 +206,7 @@
   </div>
  </center>
  <p>
-  这时修行人才悟到，刚才自己岂不是盯着别人的过错不放吗？难怪打坐常陷入昏沉啊。一味诵经持咒，不等于修行，遇事不责己过，反迁怒他人，又如何能获得解脱呢！
+  知名评论人陈破空在视频节目中点评认为，五中全会看似波澜不惊，但会议后三天怀疑经历了一场暗斗。官方通过的所谓2035年远景目标，是说明习近平想掌权到2035年，甚至传闻如果他到时没死，还想继续垂帘听政，这当然只是习自己的小九九。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -207,7 +221,7 @@
   </div>
  </center>
  <p>
-  参考资料：民间故事
+  中共现在正面临史无前例的内外经济困局，政权岌岌可危，不少观察家认为，中共能否挺到二十大还很难说。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -271,13 +285,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/911140.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/911140.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/911140.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/27/911140.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/951055.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/951055.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/951055.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/01/951055.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p7/911140.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p2/951055.md' width='0px' height='0px'/>
