--- a/pages/p7/911140.md
+++ b/pages/p7/911140.md
@@ -1,4 +1,4 @@
-### 司马昭之心 中国间谍高度活跃被澳洲曝光？(图)
+### 神明为什么会对某人特别严厉呢？(组图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="间谍活动示意图" src="https://img3.secretchina.com/pic/2020/8-17/p2756451a402031147-ss.jpg" style="height:337px; width:600px"/>
+  <img alt="" src="https://img2.secretchina.com/pic/2018/5-1/p2156761a228076124-ss.jpg" style="height:335px; width:600px"/>
   <br>
-   间谍活动示意图(图片来源：公有领域 Pixabay)
+   神总适时提醒人们说：“作为一个修行人，凡事应先修正自已！怎能向外求，盯着别人的错误呢？”（绘图：志清/看中国）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,70 +21,36 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.51.119:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.51.119:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/) &nbsp;|&nbsp; [希望之声广播](http://167.172.10.89/radio.html) &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html)
-
-#### 💥 [九评共产党](http://141.164.51.119:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.51.119:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.51.119:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.51.119:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  中共思想如何影響中國人：為什麼練法輪功被迫害卻成最有應得，為什麼講迫害就是涉及政治](http://141.164.51.119:10000/videos/news/truth01.html)
-
-#### [ 🔥  深度報導紀錄片《大疫襲來》- 2020年疫情大流行的背後，哪些真相被忽略、被掩蓋？](http://141.164.51.119:10000/videos/news/../corona/index.html)
-
-#### [ 🔥  音频：中央党校蔡霞教授在红色后代秘密会议上的发言：必须换习、否则亡党！（蔡霞8月17日已被处理）](http://141.164.51.119:10000/videos/news/caixia.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年8月17日讯】日前
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/澳洲" target="_blank">
-    澳洲
-   </span>
-  </strong>
-  国防部相当罕见的发出警告，指称有高度活跃的外国
-  <strong>
-   间谍
-  </strong>
-  ，密谋窃取我军方机密。当地媒体援引不具名官员的谈话，直指相关的间谍活动是来自于
-  <strong>
-   中国
-  </strong>
-  。
+  从前有位修行人，心地善良纯净。他在森林里结舍，每天在大树下诵经读法、持咒守戒、打坐入定。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  16日，据
-  <span href="https://zh.wikipedia.org/wiki/%E6%BE%B3%E5%A4%A7%E5%88%A9%E4%BA%9A">
-   澳洲
-  </span>
-  国营媒体澳洲广播公司(ABC)报导指出，国防部发布声明表示，有高度活跃的外国
-  <span href="https://zh.wikipedia.org/wiki/%E9%97%B4%E8%B0%8D">
-   间谍
-  </span>
-  ，正在密谋窃取澳洲的军方机密，这已经对于澳洲斥资90亿澳币计(大约1,900亿新台币)的军舰国造计划，构成了“极度威胁”(extreme threat)。
+  <strong>
+   修行人手摘香莲　惹怒莲花池神
+  </strong>
  </p>
  <p>
-  无党籍独立联邦参议员派屈克(Rex Patrick)认为，这次国防部的相关声明，可说是严厉措辞，更是史无前例的。
+  一天他打完坐，起身信步走走。一抬头，看到眼前出现了一个莲花池，满池盛开的莲花，迎风摇曳，十分美丽。他心中欢喜，生起一个念头：这么美丽的莲花，摘一朵带回精舍，敬放在佛像前，禅坐时闻着沁人心脾的芬芳，多好啊！
  </p>
  <p>
-  据澳洲广播公司报导，国防部在稍早拒绝公开他们向联邦政府提交的船舰国造计划的简报内容，不过有记者根据资讯自由公开(FOI)法规，直接向当局提出申请，以要求国防部公开相关资讯。
+  于是，他弯身在池边挑选了一朵莲花，摘下来。他满心欢喜地将莲花双手捧在胸前，正要离开，耳边突然传来一个巨大而又严厉的声音：“你怎敢随意偷采我的莲花？”
  </p>
  <p>
-  国防部发出回应声明称，因为有外国
-  <span href="https://www.secretchina.com/news/gb/tag/间谍" target="_blank">
-   间谍
-  </span>
-  试图窃取相关资料，为了保护澳洲国家利益，因此国防部拒绝公开。
+  他环顾四周，什么也看不到，他对着虚空发问：“你是谁？为何说这莲花是你的？”
  </p>
  <p>
-  国防部提出警告：“目前有外国的情报机构已对澳洲国家主权和联邦战略利益构成极度威胁。”、“敌人高度活跃地试图获取有关澳洲目前与未来海上实力的资料，其主要目的是要推展他们的利益及侵蚀澳洲的实力。”
+  虚空中的声音平静威严：“我是此处的莲花池神，池中所有莲花都因我的呵护而盛开。你是修行人，心起贪念，你却不知约束，任贪念主宰你，偷采我的莲花，现在还不知反省，是何道理！？”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -99,7 +65,7 @@
   </div>
  </center>
  <p>
-  国防部表示：“如果公开有关资料的话，可能将会遭人利用，将会直接或间接损害澳洲利益。”
+  修行人顿感惭愧，于是他朝着虚空顶礼：“尊敬的莲花池神！我知道错了，从今以后绝不会贪取任何不属于自己的东西。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -114,7 +80,7 @@
   </div>
  </center>
  <p>
-  报导中提及，国防部并没有指明是哪一个国家所为，不过有多名不具名的国家安全事务官员透露，有关的间谍活动，主要是受到北京政府指使。
+  这时，另一个陌生人走近了莲花池边，只见那人低头自语：“哇！这么好的莲花啊！我何不摘了拿到集上，能卖很多钱呢！卖了钱我一定再上赌场，把昨天输的钱赢回来！”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -129,11 +95,7 @@
   </div>
  </center>
  <p>
-  关于
-  <span href="https://www.secretchina.com/news/gb/tag/中国" target="_blank">
-   中国
-  </span>
-  间谍于澳洲日益活跃的问题，已经成为澳洲关注的焦点。由于澳洲军舰国造的地点，位在南澳州的首府阿得雷德(Adelaide)，因此外界呼吁澳洲联邦政府应该下令关闭“中国驻阿德莱德(阿得雷德)领事馆”。
+  说罢，那人跳进莲花池，很快就把整池的莲花摘个精光，之后，他扬长而去。满池莲叶被他弄得狼藉一片，池底污泥泛起，美丽的荷花池变成了一潭浊水。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -148,11 +110,25 @@
   </div>
  </center>
  <p>
-  派屈克强调，
-  <span href="https://zh.wikipedia.org/wiki/%E4%B8%AD%E5%9C%8B">
-   中国
-  </span>
-  驻阿德莱德(阿得雷德)领事馆”是在2016年成立的，当时刚好就是澳洲联邦政府宣布要于阿得雷德进行军舰建造计划之时。
+  修行人看得目瞪口呆，心中充满疑惑，还有委屈与不满，他对着虚空说：“莲花池神呀！我只不过采了一朵莲花，你就那么严厉地斥责我。刚才那个人采光了你所有的莲花，将整个莲花池都践踏了，你却视而不见、一言不发，这公平吗？”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p style="text-align:center">
+  <img alt="" src="https://img2.secretchina.com/pic/2019/9-18/p2520571a584156675-ss.jpg"/>
+  <br>
+   莲花池神说道：“一块洁白的布匹，沾上一点脏污就非常显眼，但只要用力清洗，便会洁白如新；而一块黑抹布，长年浸渍在污水中，恐怕怎么洗也洗不干净了。”（摄影：李芳）
+  </br>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -167,7 +143,7 @@
   </div>
  </center>
  <p>
-  派屈克说，中国领事馆为何会出现在澳洲拥有大型军工业与航太研发机构的南澳州，这已经引发澳洲国会朝野双方的担忧。
+  虚空中传来莲花池神慈悲的声音：“一块洁白的布匹，沾上一点脏污就非常显眼，但只要用力清洗，便会洁白如新；而一块黑抹布，长年浸渍在污水中，恐怕怎么洗也洗不干净了。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -186,7 +162,7 @@
   </ins>
  </center>
  <p>
-  自由籍联邦参议院议员的菲拉凡蒂-威尔斯(Concetta Fierravanti-Wells)也提醒，过去冷战时期，苏联也曾有过类似的试图来窃取澳洲军方研究资料的活动。
+  “你是个修行人，如同那块洁白的布匹，我呵斥你是为了提醒，让你及时意识到自己的污点，去掉它，你应为此感到高兴才是。而那赌徒，已沉沦太久，难有改过之念，自会坠入报应之道，我又何必呵斥他呢！”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -201,7 +177,7 @@
   </div>
  </center>
  <p>
-  她认为，对于北京在阿德雷德大量部署了所谓的“外交”工作，她一点也不诧异。
+  神继续启悟说：“作为一个修行人，凡事应先修正自已！怎能向外求，盯着别人的错误呢？”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -216,7 +192,7 @@
   </div>
  </center>
  <p>
-  菲拉凡蒂-威尔斯表示，若澳洲安全情报组织(ASIO)及执法单位发现有任何的违法情事，就应驱逐那些所谓的“外交人员”。
+  这时修行人才悟到，刚才自己岂不是盯着别人的过错不放吗？难怪打坐常陷入昏沉啊。一味诵经持咒，不等于修行，遇事不责己过，反迁怒他人，又如何能获得解脱呢！
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -231,7 +207,7 @@
   </div>
  </center>
  <p>
-  劳工党籍的联邦众议院议员钱皮恩(Nick Champion)直指，中国驻在阿德莱德(阿得雷德)领事馆的中国外交官员的人数，已经多得不合乎比例，澳洲当局应该要与中国政府进行交涉，以减少有关其外交官员人数。
+  参考资料：民间故事
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -263,7 +239,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -295,13 +271,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/943267.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/943267.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/943267.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/08/18/943267.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/911140.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/911140.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/911140.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/27/911140.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p9/943267.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p7/911140.md' width='0px' height='0px'/>
